--- a/src/style.css
+++ b/src/style.css
@@ -74,7 +74,7 @@ button {
 #image-target {
     height: 350px;
     border-width: 5px;
-    border-color: red;
+    border-color: #ff0000;
     border-style: solid;
     margin: 20px 0px;
     transition: all 0.5s ease-in-out;
@@ -120,6 +120,7 @@ button {
     border: 1px solid lightgray;
     color: slategrey;
     width: inherit;
+    height: inherit;
     align-items: center;
     transition: all 0.3s ease-in-out;
 }
@@ -254,13 +255,24 @@ table button:focus {
     flex-direction: row;
     justify-content: space-around;
     align-items: flex-end;
-    width: 100%;
-    height: 400px;
+    width: 1000px;
+    height: 500px;
     margin: 10px 0;
     background-color: whitesmoke;
+    border-radius: 20px;
 }
 
-#diagramBlock div {
-    flex: 0 1 auto;
-    align-self: auto;
+.hover-helper:hover {
+    filter: brightness(85%);
+}
+
+#diagramBlock p {
+    font-weight: bold;
+    text-align: center;
+    padding: 3px 0;
+}
+
+.diagramInfo {
+    color: slategrey;
+    text-shadow: 0 0 5px white;
 }
